[tool.poetry]
name = "worldclock"
version = "0.1.0"
description = "Small script to show time around the world"
authors = ["Nikolai Hartmann <nikoladze@posteo.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dateutil = "^2.9.0.post0"

[tool.poetry.scripts]
worldclock = "worldclock:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
